[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Raven Platform"
authors = [{name = "GTRI", email = "gtri"}]
dynamic = ["version", "description"]

[tool.poetry]
name = "Raven Platform"
version = "1.1.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "6.1.3"
sphinx_rtd_theme = "1.2.0"
sphinx_immaterial = "0.11.3"
